--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,10 +14,15 @@ Aquamarine: #9CC3D5FF
 $color-primary: #9CC3D5FF;          // Aquamarine
 $color-primary-light: #89ABE3FF;    // Sky blue
 $color-primary-dark: #00539CFF;     // Royal Blue
+
+$color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 
 $color-white: #fff;
 $color-black: #000;
+
+// FONT
+$default-font-size: 1.6rem;
 
 // GRID
 $grid-width: 114rem;
