--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,3 +43,38 @@ body {
     font: bold 1.6rem "Lato", sans-serif;
     color: $color-black;
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 0.2rem;
+    transition: all .2s;
+
+    &:hover {
+        // transform: skewY(2deg) skewX(15deg) scale(1.1);
+        transform: scale(1.05);
+        text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    }
+}
+
+.heading-tertiary {
+    font-size: 1.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $color-grey-dark;
+}
+
+.paragraph {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: $color-grey-dark;
+    
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
