--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -8,7 +8,7 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
     }
 
     &:hover {
@@ -32,6 +32,34 @@
             background-color: $color-white;
         }
     }
+
+    &-text {
+        
+        &:link,
+        &:visited {
+            font-size: $default-font-size;
+            color: $color-primary-dark;
+            display: inline-block;          // allows you to style the a(nchor) tag as a block elem (with padding, margins etc)
+            text-decoration: none;
+            border-bottom: 1px solid $color-primary-dark;
+            padding: 3px;
+            transition: all .2s;
+        }
+
+        &:hover {
+            background-color: $color-primary;
+            color: $color-black;
+            box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+            transform: translateY(-2px);
+            // padding: 3px;
+        }
+
+        &:active {
+            transform: translateY(0px);
+            box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+        }
+    }
+
     &::after {
         /* Alway specify content & display */
         content :"";
@@ -50,3 +78,4 @@
         
     }
 }
+
