--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .heading-secondary {
-    font-size: 3.5rem;
+    font-size: 4rem;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
@@ -63,17 +63,20 @@ body {
 }
 
 .heading-tertiary {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
     color: $color-grey-dark;
 }
 
 .paragraph {
-    font-size: 1.6rem;
-    line-height: 1.5;
+    font-size: 1.3rem;
+    line-height: 1.6;
     color: $color-grey-dark;
-    
+    text-align: justify;
+    width: 90%;
+
+
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
