--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -24,6 +24,7 @@
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
+    
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
@@ -34,7 +35,9 @@
     }
 
     &-text {
-        
+        // display: inline-block;
+        // padding: 1.5rem 4rem;
+
         &:link,
         &:visited {
             font-size: $default-font-size;
@@ -42,7 +45,8 @@
             display: inline-block;          // allows you to style the a(nchor) tag as a block elem (with padding, margins etc)
             text-decoration: none;
             border-bottom: 1px solid $color-primary-dark;
-            padding: 3px;
+            padding: 1rem;
+            border-radius: 3px;
             transition: all .2s;
         }
 
