--- a/img/Spacetours _ Explore space at your own pace._files/style.css
+++ b/img/Spacetours _ Explore space at your own pace._files/style.css
@@ -242,35 +242,16 @@ body {
 
 .card {
   perspective: 150rem;
-  -moz-perspective: 150rem;
-  height: 50rem;
-  position: relative; }
+  -moz-perspective: 150rem; }
   .card__side {
+    background-color: orangered;
     color: #fff;
     font-size: 2rem;
     height: 50rem;
-    border-radius: 5px;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-    transition: all .8s ease;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    backface-visibility: hidden; }
-    .card__side--front {
-      background-color: #fff; }
-    .card__side--back {
-      transform: rotateY(180deg); }
-      .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
-      .card__side--back-2 {
-        background-image: linear-gradient(to right bottom, #2998ff, #5543fa); }
-      .card__side--back-3 {
-        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
-  .card:hover .card__side--front {
+    transition: all .8s; }
+  .card:hover .card__side {
     transform: rotateY(180deg); }
-  .card:hover .card__side--back {
-    transform: rotateY(0); }
 
 .row {
   max-width: 114rem;
