--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,12 @@ $color-primary: #9CC3D5FF;          // Aquamarine
 $color-primary-light: #89ABE3FF;    // Sky blue
 $color-primary-dark: #00539CFF;     // Royal Blue
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5543fa;
+
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 
@@ -28,3 +34,6 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// Box Shadows
+$std-box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
