--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .section-about {
     background-color: $color-grey-light-1;
     padding: 25rem 0;
-    margin-top: -20vh;
+    margin-top: -20rem;
 }
 
 .section-features {
@@ -20,5 +20,10 @@
     & > * { // direct child selector that selects all children of an element
         transform: skewY(7deg);
     } // .section-features > * (direct children are the immediate children, not all descendents)
+}
 
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    // margin-top: -20vh;
 }
