--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,10 +18,15 @@ $color-primary-dark: #00539CFF;     // Royal Blue
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
+$color-quad-light: #55c57a;
+$color-quad-dark: #28b485;
+
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5543fa;
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
 $color-grey-dark: #777;
 
 $color-white: #fff;
