--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,14 +1,14 @@
 .card {
+    // Functionality
     perspective: 150rem;
     -moz-perspective: 150rem;
-    height: 50rem;
+    height: 34rem;
     position: relative;
 
     &__side {
-        color: #fff;
-        font-size: 2rem;
         height: 50rem;
         border-radius: 5px;
+        overflow: hidden;
         box-shadow: $std-box-shadow; // 0 in the x-direction, 40px blur, rgba black, 15% opacity??
         transition: all .8s ease;
         position: absolute;
@@ -29,23 +29,132 @@
             }
 
             &-2 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+                background-image: linear-gradient(to right bottom, $color-quad-light, $color-quad-dark);
             }
 
             &-3 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
             }
         }
 
     }
 
     &:hover &__side--front {
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
 
     &:hover &__side--back {
         transform: rotateY(0);
     }
+
+    // front side styling
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen; // only works on safari, firefox, google-chrome
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/space-5.jpeg);
+        }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom, $color-quad-light, $color-quad-dark), url(../img/space-6.jpeg);
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/space-7.jpeg);
+        }
+    }
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 75%;
+    }
+
+    &__heading-span {
+        // padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+
+        &--1 {
+            background-image: linear-gradient(to right bottom,
+                rgba($color-secondary-light, 0.85),
+                rgba($color-secondary-dark, .85));
+        }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom,
+                rgba($color-quad-light, 0.85),
+                rgba($color-quad-dark, .85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom,
+            rgba($color-tertiary-light, 0.85),
+            rgba($color-tertiary-dark, .85));
+        }
+    }
+
+    &__details {
+        padding: 3rem;
+
+        ul {
+            list-style: none;
+            width: 80%;
+            font-weight: regular;
+            color: $color-grey-dark;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+                
+                &:not(:last-child) {
+                    border-bottom: 1px solid $color-grey-light-2;
+                }
+            }
+        }
+    }
+    
+    // FRONT SIDE STYLING
+    &__cta {
+        // center method with position: absolute
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); // width of element, -50% to put it back up
+        width: 90%;
+        text-align: center;
+
+    }
+    
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 300;
+    }
 }
+
 
 //.card:hover .card__side { (don't put the hover on the card__side directly because we have more sides later
