finished booking section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -28,6 +28,7 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 
 $color-white: #fff;
 $color-black: #000;
@@ -42,3 +43,6 @@ $gutter-horizontal: 6rem;
 
 // Box Shadows
 $std-box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+// ROUNDED EDGES
+$std-bor-radius: 3px;
