--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,8 @@ html {
     font-size: 62.5%;
 }
 
+
 main {
-    background-color: $color-grey-light-1;
+    // background-color: $color-grey-light-1;
+    
 }
