--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,4 +1,6 @@
 .btn { // button is like a component (cuz it's like a block)
+
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,6 +11,10 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // Change for the <button> element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -20,7 +26,9 @@
             opacity: 0;
         }
     }
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
@@ -43,37 +51,6 @@
         }
     }
 
-
-    &-text {
-        // display: inline-block;
-        // padding: 1.5rem 4rem;
-
-        &:link,
-        &:visited {
-            font-size: $default-font-size;
-            color: $color-primary-dark;
-            display: inline-block;          // allows you to style the a(nchor) tag as a block elem (with padding, margins etc)
-            text-decoration: none;
-            border-bottom: 1px solid $color-primary-dark;
-            padding: 1rem;
-            border-radius: 3px;
-            transition: all .2s;
-        }
-
-        &:hover {
-            background-color: $color-primary;
-            color: $color-black;
-            box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
-            transform: translateY(-2px);
-            // padding: 3px;
-        }
-
-        &:active {
-            transform: translateY(0px);
-            box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-        }
-    }
-
     &::after {
         /* Alway specify content & display */
         content :"";
@@ -90,6 +67,36 @@
     &--animated {
         animation: moveInBottom 0.4s ease-out .6s;
         
+    }
+}
+
+.btn-text {
+    // display: inline-block;
+    // padding: 1.5rem 4rem;
+
+    &:link,
+    &:visited {
+        font-size: $default-font-size;
+        color: $color-primary-dark;
+        display: inline-block;          // allows you to style the a(nchor) tag as a block elem (with padding, margins etc)
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary-dark;
+        padding: 1rem;
+        border-radius: 3px;
+        transition: all .2s;
+    }
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-black;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+        transform: translateY(-2px);
+        // padding: 3px;
+    }
+
+    &:active {
+        transform: translateY(0px);
+        box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
 }
 
