--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -40,6 +40,7 @@ $default-font-size: 1.6rem;
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 8rem;
 $gutter-horizontal: 6rem;
 
 // Box Shadows
