--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -5,7 +5,7 @@
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.5rem 4rem;
+        padding: 1.5rem 4rem; // padding becomes 1.5*8 = 12, 4*8=48 pixels for tablet-landscape
         display: inline-block;
         border-radius: 10rem;
         transition: all .2s;
