--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,21 +9,43 @@
         transition: all .2s;
         // outline-offset: 2rem;
 
-        &--p2 {
-            left: 0;
-            top: -2rem;
-        }
-
-        &--p3 {
-            right: -2rem;
-            top: 2rem;
-            
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.3333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
         }
 
         &--p1 {
             left: 20%;
             top: 10rem;
             z-index: 1;
+            @include respond(tab-port) {
+                top: 0;
+                left: 0;
+                transform: scale(1.1);
+            }
+        }
+
+        &--p2 {
+            left: 0;
+            top: -2rem;
+            z-index: 100;
+            @include respond(tab-port) {
+                top: -1rem;
+                transform: scale(1.2);
+                // left: 0;
+            }
+        }
+
+        &--p3 {
+            right: -2rem;
+            top: 2rem;
+            @include respond(tab-port) {
+                top: 0;
+                transform: scale(1.3);
+                // left: 0;
+            }
         }
 
         &:hover {
