--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -5,6 +5,15 @@
     // !(.row:last-child()) -> everything but the last child
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond(tab-port) { 
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+
+    @include respond(tab-port) { // changes the max-width from default grid-width (desktop size) to a smaller max
+        max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix;
@@ -20,7 +29,18 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
-        } 
+
+            // if we're at tablet portrait width, we don't need any horizontal gutters
+            @include respond(tab-port) { 
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) { 
+            width: 100% !important;
+        }
+
     }
 
     .col-1-of-2 {
@@ -29,6 +49,7 @@
 
     .col-1-of-3 {
         width: calc((100% - 2 * (#{$gutter-horizontal}))/3); // width is 1/3 of 1140px minus 2 horizontal gutters
+        height: 600px;
     }
 
     .col-2-of-3 {
