--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,13 @@
 .section-about {
     background-color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -20rem;
+    padding: 35rem 0;
+    margin-top: -20vh;
+    margin-bottom: 5rem;
     overflow: hidden;
+
+    @include respond(tab-port) {
+        padding: 30rem 0;
+    }
 }
 
 .section-features {
@@ -21,42 +26,81 @@
     & > * { // direct child selector that selects all children of an element
         transform: skewY(7deg);
     } // .section-features > * (direct children are the immediate children, not all descendents)
+
+    @include respond(tab-port) {
+        padding: 15rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     // margin-bottom: 20vh;
+
+    @include respond(tab-port) {
+        padding: 15rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
     // background-color: $color-grey-light-1;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .book {
     background-image: linear-gradient(105deg,
-                                      rgba($color-white, .9) 0%, 
-                                      rgba($color-white, .9) 50%,
-                                      transparent 50%), // at 50%, we want an orangered
-                                      
-                                      url(../img/space-10.jpg);
-                                      // url(..) second arg because it's behind the gradient
-    background-size: 100%; // same thing as cover
+        rgba($color-white, .9) 0%, 
+        rgba($color-white, .9) 50%,
+        transparent 50%), // at 50%, we want an orangered
+        url(../img/space-10.jpg);
+        // url(..) second arg because it's behind the gradient
+    background-size: 100%; // same thing as cover; fits it in the x-direction
     border-radius: $std-bor-radius;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
     // testing
-    height: 50rem;
+    // height: 50rem;
+
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg,
+            rgba($color-white, .9) 0%, 
+            rgba($color-white, .9) 65%,
+            transparent 65%),
+            url(../img/space-10.jpg);
+            background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right,
+            rgba($color-white, .9) 0%, 
+            rgba($color-white, .9) 100%),
+            url(../img/space-10.jpg);
+    }
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
