--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,6 +9,14 @@
     visibility: hidden; // set visibility to hidden too because you want to completely hide (not show links) to display
     transition: all .3s;
 
+    // feature query
+    // graceful degradation using supports @ rule
+    @supports(-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
+
     z-index: 2000;
 
 
