--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -51,7 +51,6 @@ html {
 body {
     box-sizing: border-box;
     padding: 3rem;
-
     @include respond(tab-port) { // width < 900?
         padding: 0;
     }
@@ -60,5 +59,9 @@ body {
 
 main {
     background-color: $color-grey-light-1;
-    
+}
+
+::selection {
+    background-color: $color-primary-dark;
+    color: $color-white;
 }
