--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -15,6 +15,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
 
         &--front {
@@ -36,7 +37,6 @@
                 background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
             }
         }
-
     }
 
     &:hover &__side--front {
@@ -56,15 +56,12 @@
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
-
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/space-5.jpeg);
         }
-
         &--2 {
             background-image: linear-gradient(to right bottom, $color-quad-light, $color-quad-dark), url(../img/space-6.jpeg);
         }
-
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/space-7.jpeg);
         }
@@ -85,7 +82,6 @@
         // padding: 1rem 1.5rem;
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
-
         &--1 {
             background-image: linear-gradient(to right bottom,
                 rgba($color-secondary-light, 0.85),
@@ -136,7 +132,6 @@
         transform: translate(-50%, -50%); // width of element, -50% to put it back up
         width: 90%;
         text-align: center;
-
     }
     
     &__price-box {
@@ -155,9 +150,9 @@
         font-weight: 300;
     }
 
-
-
-    @include respond(tab-port) {
+    // @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+            only screen and (hover: none) { // only apply for devices where hovering is not possible (where touch is primary means)
         height: auto;
         border-radius: 5px;
         background-color: $color-white;
@@ -168,12 +163,10 @@
             overflow: hidden;
             position: relative;
             box-shadow: none;
-
             &--back {
                 transform: rotateY(0deg);
                 clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
             }
-
         }
 
         &:hover &__side--front {
