--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -30,7 +30,7 @@
         &--p2 {
             left: 0;
             top: -2rem;
-            z-index: 100;
+            z-index: 3;
             @include respond(tab-port) {
                 top: -1rem;
                 transform: scale(1.2);
@@ -41,6 +41,7 @@
         &--p3 {
             right: -2rem;
             top: 2rem;
+            // z-index: 6;
             @include respond(tab-port) {
                 top: 0;
                 transform: scale(1.3);
